# time-tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: black.yml  ci.yml  mypy.yml  rich-codex.yml
tests/: test_cli.py  test_main.py
time_tracker/: cli.py  data_store.py  main.py  schemas.py
