[tool.poetry]
name = "time-tracker"
version = "0.1.0"
description = "Time Tracker that tracks time and generates reports."
authors = ["Eric Hernandez <eric.vim.root@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "time_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^13.1.0"
dataclasses-json = "^0.5.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
coverage = "^7.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.ekkore.masonry.api"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "cli",
    "main"
]

[tool.poetry.scripts]
time-tracker = 'time_tracker.cli:cli'